# CodeFossil

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tag.yml
codefossil/: __init__.py  __main__.py
codefossil/ai/: service.py
codefossil/cache/: cache.py
codefossil/cli/: main.py
codefossil/core/: pipeline.py
codefossil/output/: formatter.py
codefossil/scanner/: npm.py
codefossil/utils/: cache.py
examples/: package.sample.json
tests/: test_ai.py  test_cli.py  test_output.py  test_package_metadata.py  test_scanner.py
