[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codefossil"
version = "0.1.3"
description = "Production-ready CLI to detect stale npm dependencies, score risk, and provide migration guidance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "CodeFossil Maintainers" }
]
keywords = [
  "cli",
  "security",
  "dependencies",
  "npm",
  "devtools",
  "supply-chain",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "requests>=2.32.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
ai = [
  "openai>=1.0.0",
  "anthropic>=0.34.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "black>=24.8.0",
  "mypy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/SamScript37/codefossil"
Repository = "https://github.com/SamScript37/codefossil"
Issues = "https://github.com/SamScript37/codefossil/issues"

[project.scripts]
codefossil = "codefossil.cli.main:app"

[tool.setuptools.packages.find]
include = ["codefossil*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
